--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/app.js"
+    "test": "NODE_ENV=test jest --runInBand --detectOpenHandles --forceExit",
+    "start": "nodemon src/server.js",
+    "lint": "eslint 'src/**' --ext .js",
+    "format": "prettier --write 'src/**'"
   },
   "repository": {
     "type": "git",
@@ -26,9 +28,16 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "prisma": "^7.2.0"
+    "prisma": "^7.2.0",
+    "zod": "^4.3.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-node": "^11.1.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.11",
+    "prettier": "^2.8.8",
+    "supertest": "^6.3.4"
   }
 }
