--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "prisma": "^7.2.0",
-    "zod": "^4.3.2"
+    "zod": "^4.3.2",
+    "pino": "^8.15.0"
   },
   "devDependencies": {
     "eslint": "^8.52.0",
